# auth/internal/handler/rest/oauth2.go
@@ -13,18 +13,18 @@ type oAuth2SignUpUserModel struct {
 	Password string `json:"password" validate:"required,min=8,max=64" example:"password"`
 }
 
-// @Summary     oAuth2 sign up
-// @Description create account
-// @Tags        oAuth2
-// @Accept      json
-// @Produce     json
-// @Param       input body oAuth2SignUpUserModel true "account info"
-// @Success     204
-// @Failure     400     {object} errors.HTTPError
-// @Failure     409     {object} errors.HTTPError
-// @Failure     500     {object} errors.HTTPError
-// @Failure     default {object} errors.HTTPError
-// @Router      /oauth2/sign-up [post]
+// @Summary		oAuth2 Sign Up
+// @Description	Create account
+// @Tags			oAuth2
+// @Accept			json
+// @Produce		json
+// @Param			input	body	oAuth2SignUpUserModel	true	"Account info"
+// @Success		204
+// @Failure		400		{object}	errors.HTTPError
+// @Failure		409		{object}	errors.HTTPError
+// @Failure		500		{object}	errors.HTTPError
+// @Failure		default	{object}	errors.HTTPError
+// @Router			/oauth2/sign-up [post]
 func (h *Handler) oAuth2SignUp(c echo.Context) error {
 	input := new(oAuth2SignUpUserModel)
 	if err := c.Bind(input); err != nil {
@@ -42,7 +42,7 @@ func (h *Handler) oAuth2SignUp(c echo.Context) error {
 
 	_, err := h.services.OAuth2Service.SignUpRequestHandler.Handler(c.Request().Context(), request)
 	if errors.Is(err, oauth2.ErrSignUpUserAlreadyExist) {
-		return echo.NewHTTPError(http.StatusConflict, "A user with this username already exists").SetInternal(err)
+		return echo.NewHTTPError(http.StatusConflict, "a user with this username already exists").SetInternal(err)
 	} else if err != nil {
 		return echo.ErrInternalServerError.SetInternal(err)
 	}
@@ -60,18 +60,18 @@ type oAuth2SignInUserResult struct {
 	RefreshToken string `json:"refresh_token"`
 }
 
-// @Summary     oAuth2 sign in
-// @Description sign in
-// @Tags        oAuth2
-// @Accept      json
-// @Produce     json
-// @Param       input   body     oAuth2SignInUserModel true "account info"
-// @Success     200     {object} oAuth2SignInUserResult
-// @Failure     400     {object} errors.HTTPError
-// @Failure     404     {object} errors.HTTPError
-// @Failure     500     {object} errors.HTTPError
-// @Failure     default {object} errors.HTTPError
-// @Router      /oauth2/sign-in [post]
+// @Summary		oAuth2 Sign In
+// @Description	Sign in
+// @Tags			oAuth2
+// @Accept			json
+// @Produce		json
+// @Param			input	body		oAuth2SignInUserModel	true	"Account info"
+// @Success		200		{object}	oAuth2SignInUserResult
+// @Failure		400		{object}	errors.HTTPError
+// @Failure		404		{object}	errors.HTTPError
+// @Failure		500		{object}	errors.HTTPError
+// @Failure		default	{object}	errors.HTTPError
+// @Router			/oauth2/sign-in [post]
 func (h *Handler) oAuth2SignIn(c echo.Context) error {
 	input := new(oAuth2SignInUserModel)
 	if err := c.Bind(input); err != nil {
@@ -89,9 +89,9 @@ func (h *Handler) oAuth2SignIn(c echo.Context) error {
 
 	result, err := h.services.OAuth2Service.SingInRequestHandler.Handle(c.Request().Context(), request)
 	if errors.Is(err, oauth2.ErrSignInUserNotFound) {
-		return echo.NewHTTPError(http.StatusNotFound, "User with that username was not found")
+		return echo.NewHTTPError(http.StatusNotFound, "user with that username was not found").SetInternal(err)
 	} else if errors.Is(err, oauth2.ErrSignInInvalidPassword) {
-		return echo.NewHTTPError(http.StatusBadRequest, "Invalid password")
+		return echo.NewHTTPError(http.StatusBadRequest, "invalid password").SetInternal(err)
 	} else if err != nil {
 		return echo.ErrInternalServerError.SetInternal(err)
 	}
@@ -102,23 +102,23 @@ func (h *Handler) oAuth2SignIn(c echo.Context) error {
 	})
 }
 
-type oAuth2LogOutModel struct {
+type oAuth2SignOutModel struct {
 	AccessToken string `json:"access_token" validate:"required,jwt" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"`
 }
 
-// @Summary     oAuth2 sign out
-// @Description sign out
-// @Tags        oAuth2
-// @Accept      json
-// @Produce     json
-// @Param       input body oAuth2LogOutModel true "account info"
-// @Success     204
-// @Failure     400     {object} errors.HTTPError
-// @Failure     500     {object} errors.HTTPError
-// @Failure     default {object} errors.HTTPError
-// @Router      /oauth2/sign-out [post]
+// @Summary		oAuth2 Sign Out
+// @Description	Sign out
+// @Tags			oAuth2
+// @Accept			json
+// @Produce		json
+// @Param			input	body	oAuth2SignOutModel	true	"Access token"
+// @Success		204
+// @Failure		400		{object}	errors.HTTPError
+// @Failure		500		{object}	errors.HTTPError
+// @Failure		default	{object}	errors.HTTPError
+// @Router			/oauth2/sign-out [post]
 func (h *Handler) oAuth2SignOut(c echo.Context) error {
-	input := new(oAuth2LogOutModel)
+	input := new(oAuth2SignOutModel)
 	if err := c.Bind(input); err != nil {
 		return err
 	}
@@ -133,7 +133,7 @@ func (h *Handler) oAuth2SignOut(c echo.Context) error {
 
 	_, err := h.services.OAuth2Service.SignOutRequestHandler.Handle(c.Request().Context(), request)
 	if errors.Is(err, oauth2.ErrSignOutInvalidOrExpiredToken) {
-		return echo.NewHTTPError(http.StatusBadRequest, "Invalid or expired token")
+		return echo.NewHTTPError(http.StatusBadRequest, "invalid or expired token").SetInternal(err)
 	} else if err != nil {
 		return echo.ErrInternalServerError.SetInternal(err)
 	}
@@ -142,7 +142,7 @@ func (h *Handler) oAuth2SignOut(c echo.Context) error {
 }
 
 type oAuth2RefreshModel struct {
-	RefreshToken string `json:"refresh_token" validate:"required,jwt" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"`
+	T string `query:"t" validate:"required,jwt" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"`
 }
 
 type oAuth2RefreshResult struct {
@@ -150,17 +150,17 @@ type oAuth2RefreshResult struct {
 	RefreshToken string `json:"refresh_token"`
 }
 
-// @Summary     oAuth2 refresh
-// @Description refresh
-// @Tags        oAuth2
-// @Accept      json
-// @Produce     json
-// @Param       input   body     oAuth2RefreshModel true "account info"
-// @Success     200     {object} oAuth2RefreshResult
-// @Failure     400     {object} errors.HTTPError
-// @Failure     500     {object} errors.HTTPError
-// @Failure     default {object} errors.HTTPError
-// @Router      /oauth2/refresh [post]
+// @Summary		oAuth2 Refresh
+// @Description	Refresh
+// @Tags			oAuth2
+// @Accept			json
+// @Produce		json
+// @Param			t		query		oAuth2RefreshModel	true	"Refresh token"
+// @Success		200		{object}	oAuth2RefreshResult
+// @Failure		400		{object}	errors.HTTPError
+// @Failure		500		{object}	errors.HTTPError
+// @Failure		default	{object}	errors.HTTPError
+// @Router			/oauth2/refresh [get]
 func (h *Handler) oAuth2Refresh(c echo.Context) error {
 	input := new(oAuth2RefreshModel)
 	if err := c.Bind(input); err != nil {
@@ -172,12 +172,12 @@ func (h *Handler) oAuth2Refresh(c echo.Context) error {
 	}
 
 	request := &oauth2.RefreshRequest{
-		RefreshToken: input.RefreshToken,
+		RefreshToken: input.T,
 	}
 
 	result, err := h.services.OAuth2Service.RefreshRequestHandler.Handle(c.Request().Context(), request)
 	if errors.Is(err, oauth2.ErrRefreshInvalidOrExpiredToken) {
-		return echo.NewHTTPError(http.StatusBadRequest, "Invalid or expired token")
+		return echo.NewHTTPError(http.StatusBadRequest, "invalid or expired token").SetInternal(err)
 	} else if err != nil {
 		return echo.ErrInternalServerError.SetInternal(err)
 	}
